fixed sidebar behind content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ a {
 
 .sidebar {
   position: absolute;
+  z-index: 50;
   left: -800px;
   top: 0;
   height: 100%;
@@ -33,50 +34,16 @@ a {
 
 
 @-webkit-keyframes slide {
-  100% { left: 0; }
+  100% { left: 0;
+    z-index: 50; }
 }
 
 @keyframes slide {
-  100% { left: 0; }
+  100% { left: 0;
+    z-index: 50; }
 }
 
 
-.fadein{
-  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 1s; /* Firefox < 16 */
-   -ms-animation: fadein 1s; /* Internet Explorer */
-    -o-animation: fadein 1s; /* Opera < 12.1 */
-       animation: fadein 1s;
-}
-
-@keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-from { opacity: 0; }
-to   { opacity: 1; }
-}
 
 /* react calendar */
 .react-calendar{
